fix: scrollbar

--- a/css/_partials/Small.css
+++ b/css/_partials/Small.css
@@ -31,9 +31,6 @@
 
   .scroll {
     max-height: 500px;
-    overflow: hidden;
-  }
-  .scroll:hover {
     overflow: auto;
   }
 
